# skigen

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  bench_ensembles.cpp  bench_float_vs_double.cpp  bench_linear_model.cpp  bench_mlp.cpp  bench_preprocessing.cpp  bench_standard_scaler.cpp
examples/: CMakeLists.txt  basic_pipeline.cpp  classification.cpp  classification_workflow.cpp  ml_pipeline.cpp  pca_clustering.cpp  pca_clustering_workflow.cpp  regression_pipeline.cpp
examples/anomaly/: anomaly.cpp
examples/calibration/: calibrated_classifier_cv.cpp
examples/cluster/: agglomerative_clustering.cpp  birch.cpp  dbscan.cpp  kmeans.cpp  mean_shift.cpp
examples/covariance/: covariance.cpp
examples/cross_decomposition/: cross_decomposition.cpp
examples/decomposition/: factor_analysis.cpp  pca.cpp  truncated_svd.cpp
examples/discriminant_analysis/: discriminant_analysis.cpp
examples/ensemble/: gradient_boosting_classifier.cpp  gradient_boosting_regressor.cpp  hist_gradient_boosting_classifier.cpp  hist_gradient_boosting_regressor.cpp  random_forest_classifier.cpp  random_forest_regressor.cpp
examples/feature_selection/: rfe.cpp  select_from_model.cpp  select_k_best.cpp  variance_threshold.cpp
examples/gaussian_process/: gaussian_process_classifier.cpp  gaussian_process_regressor.cpp
examples/impute/: simple_imputer.cpp
examples/isotonic/: isotonic_regression.cpp
examples/kernel_ridge/: kernel_ridge.cpp
examples/linear_model/: ard_regression.cpp  bayesian_ridge.cpp  elastic_net.cpp  lasso.cpp  linear_regression.cpp  logistic_regression.cpp  perceptron.cpp  quantile_regressor.cpp  ridge.cpp  ridge_classifier.cpp  sgd.cpp
examples/manifold/: isomap.cpp  locally_linear_embedding.cpp  mds.cpp  spectral_embedding.cpp  tsne.cpp  umap.cpp
examples/metrics/: metrics.cpp
examples/model_selection/: grid_search.cpp  model_selection.cpp  randomized_search.cpp
examples/naive_bayes/: bernoulli_nb.cpp  gaussian_nb.cpp  multinomial_nb.cpp
examples/neighbors/: kneighbors.cpp  local_outlier_factor.cpp  nearest_neighbors.cpp  radius_neighbors.cpp
examples/neural_network/: mlp_classifier.cpp  mlp_regressor.cpp
examples/optimization/: nelder_mead.cpp
examples/pipeline/: pipeline.cpp
examples/preprocessing/: label_encoder.cpp  maxabs_scaler.cpp  minmax_scaler.cpp  normalizer.cpp  polynomial_features.cpp  robust_scaler.cpp  standard_scaler.cpp
examples/svm/: linear_svc.cpp  linear_svr.cpp  nu_svc.cpp  nu_svr.cpp  one_class_svm.cpp  svc.cpp  svr.cpp
examples/tree/: decision_tree.cpp
tests/: CMakeLists.txt  test_anomaly.cpp  test_calibration.cpp  test_cluster.cpp  test_core_infra.cpp  test_covariance.cpp  test_cross_decomposition.cpp  test_decomposition.cpp  test_discriminant_analysis.cpp  test_ensemble.cpp  test_feature_selection.cpp  test_gaussian_process.cpp  test_impute.cpp  test_isotonic.cpp  test_kernel_ridge.cpp  test_linear_model.cpp  test_manifold.cpp  test_metrics.cpp  test_model_selection.cpp  test_naive_bayes.cpp  test_nearest_neighbors.cpp  test_neighbors.cpp  test_neural_network.cpp  test_optimization.cpp  test_perceptron.cpp  test_preprocessing.cpp  test_radius_neighbors.cpp  test_remaining.cpp  test_ridge_classifier.cpp  test_standard_scaler.cpp  test_svm.cpp  test_tree.cpp
tests/parity/: _common.py  generate_all.py  generate_bayesian_linear_reference.py  generate_calibration_reference.py  generate_core_reference.py  generate_covariance_reference.py  generate_decomposition_reference.py  generate_ensemble_reference.py  generate_feature_selection_reference.py  generate_isotonic_reference.py  generate_manifold_reference.py  generate_model_selection_reference.py  generate_naive_bayes_reference.py  generate_neighbors_reference.py  generate_neural_network_reference.py  generate_standard_scaler_reference.py  generate_svm_reference.py  parity_bayesian_linear.cpp  parity_calibration.cpp  parity_common.h  parity_core.cpp  parity_covariance.cpp  parity_decomposition.cpp  parity_ensemble.cpp  parity_feature_selection.cpp  parity_isotonic.cpp  parity_manifold.cpp  parity_model_selection.cpp  parity_naive_bayes.cpp  parity_neighbors.cpp  parity_neural_network.cpp  parity_svm.cpp  test_parity_main.cpp
tests/parity/data/ard_regression/: alpha.csv  coef.csv  intercept.csv  params.json  pred.csv
tests/parity/data/bayesian_ridge/: X.csv  alpha.csv  coef.csv  intercept.csv  lambda_.csv  params.json  pred.csv  y.csv
tests/parity/data/bernoulli_nb/: X.csv  class_log_prior.csv  feature_log_prob.csv  params.json  proba.csv  y.csv
tests/parity/data/calibrated_classifier_cv/: X_test.csv  X_train.csv  accuracy.csv  brier.csv  params.json  y_test.csv  y_train.csv
tests/parity/data/chi2/: X.csv  params.json  pvalues.csv  scores.csv  y.csv
tests/parity/data/elastic_net/: coef.csv  intercept.csv  params.json  pred.csv
tests/parity/data/empirical_covariance/: covariance.csv  location.csv
tests/parity/data/f_classif/: X.csv  params.json  pvalues.csv  scores.csv
tests/parity/data/f_regression/: X.csv  params.json  pvalues.csv  scores.csv  y.csv
tests/parity/data/factor_analysis/: X.csv  implied_cov.csv  noise_variance.csv  params.json
tests/parity/data/gaussian_nb/: X.csv  params.json  proba.csv  theta.csv  var.csv  y.csv
tests/parity/data/gradient_boosting_classifier/: X_test.csv  X_train.csv  score.csv  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_classifier_multiclass/: X_test.csv  X_train.csv  params.json  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_regressor/: X_test.csv  X_train.csv  score.csv  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_regressor_absolute_error/: X_test.csv  X_train.csv  score.csv  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_regressor_huber/: X_test.csv  X_train.csv  score.csv  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_regressor_quantile/: X_test.csv  X_train.csv  score.csv  y_test.csv  y_train.csv
tests/parity/data/gradient_boosting_regressor_subsample/: X_test.csv  X_train.csv  (+3 more)
(+389 files in other folders)
